# codegen-mssql

./: .gitignore  README.md  dev.txt  pyproject.toml  requirements.txt  setup.py  tool.py
app/: application.py
app/sql/: dependencies.sql  entities.sql  multi-result-procedures.sql  parameter-definition.sql  return-type.sql  single-return-type.sql  udt-table-types.sql
